# aegis-agent-platform

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
aegis/api/: auth.py  chat.py  main.py  ratelimit.py  usage.py
aegis/core/: config.py  db.py  locks.py  redis.py  tenancy.py  tenant_ctx.py  tokens.py
aegis/gateway/: breaker.py  cache.py  errors.py  factory.py  metering.py  ratelimit.py  resilience.py  router.py  schema.py
aegis/gateway/providers/: anthropic.py  base.py  openai_compat.py
aegis/runtime/: context.py  events.py  executor.py  guardrails.py  loop.py  replay.py  runtime.py  spec.py  store.py  tools.py
aegis/workers/: celery_app.py  reaper.py
deploy/: docker-compose.yml
migrations/: env.py
migrations/versions/: 6304edbb4760_tenants_users_业务底座.py  74da3bf5d6ab_runtime_五表_事件事实源与投影.py  ab31f1ad346e_usage_ledger_计量账本.py  c895f9007bf7_rls_低权角色与租户隔离策略.py
reports/: m1_fault_injection.txt  m2_degradation_pg.txt  m2_degradation_redis.txt  m2_hitl_demo.txt  m2_kill9_recovery.txt  m2_long_dialog_recording.txt  m2_ratelimit_degraded.txt  m2_ratelimit_retest.txt  m2_real_smoke.txt
scripts/: README.md  debug_raw_call.py  demo_degraded_redis_lock.py  demo_event_loop.py  demo_hitl_suspend_resume.py  demo_stop_pg_midrun.py  experiment_fault_injection.py  experiment_kill9_recovery.py  loadtest_ratelimit.py  mint_token.py  reconcile_usage.py  record_long_dialog.py  seed_demo.py  smoke_agent_real.py  smoke_gateway.py  smoke_tool_call.py
scripts/reports/: m1_fault_injection.txt
tests/: conftest.py  test_config.py  test_locks.py  test_locks_pg.py  test_rls.py  test_schema.py  test_tenancy.py  test_tokens.py
tests/api/: test_admission.py  test_auth.py  test_usage.py
tests/cassettes/: README.md  adversarial_empty_replies.json  adversarial_runaway_iterations.json  adversarial_token_burn.json  adversarial_tool_loop.json  long_dialog.json  minimal_demo.json
tests/gateway/: conftest.py  test_anthropic.py  test_base.py  test_breaker.py  test_cache.py  test_factory.py  test_metering.py  test_openai_compat.py  test_ratelimit.py  test_resilience.py  test_router.py  test_schema.py
tests/runtime/: conftest.py  test_approvals.py  test_context_layers.py  test_context_summary.py  test_event_store.py  test_events.py  test_executor.py  test_executor_exec.py  test_executor_normalize.py  test_guardrails_entry.py  test_guardrails_loop.py  test_guardrails_output.py  test_lease.py  test_long_dialog_benchmark.py  test_loop_adversarial.py  test_loop_flow.py  test_loop_gateway_errors.py  test_loop_recovery.py  test_loop_termination.py  test_projections.py  test_recovery_replay.py  test_registry.py  test_replay_cassette.py  test_replay_fake_gateway.py  test_replay_normalize.py  test_replay_recorder.py  test_runtime.py  test_spec.py  test_store.py  test_suspend_resume.py  test_tool_decorator.py  test_tools.py
tests/workers/: test_celery_app.py  test_reaper.py
