[project]
name = "aegis-agent-platform"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "celery>=5.5",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "redis>=8.0.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "import-linter>=2.13",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aegis"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# E/F=基础错误  I=import 排序  UP=过时写法升级  B=常见 bug 模式
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
explicit_package_bases = true   # ← 新增：按目录路径推导模块名，允许多目录同名文件（如两个 conftest.py）

[[tool.mypy.overrides]]
module = "celery.*"             # celery 5.5 无 py.typed（m2.10 §7 陷阱 5，实测后加）
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"          # async def 的测试函数自动被识别，不用逐个加装饰器

[tool.importlinter]
root_package = "aegis"

[[tool.importlinter.contracts]]
name = "分层依赖只能向下：api|workers → apps → runtime → gateway → core"
type = "layers"
layers = [
    "aegis.api | aegis.workers",
    "aegis.apps",
    "aegis.runtime",
    "aegis.gateway",
    "aegis.core",
]
